--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "exmxc-audit",
   "version": "1.0.0",
-  "private": true,
+  "description": "Entity Engineering Audit API for AI-search optimization.",
+  "main": "api/audit.js",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "node server.js"
+    "start": "node api/audit.js"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
-    "resend": "^3.4.0"
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "resend": "^3.2.0"
   }
 }
