--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "exmxc-audit",
   "version": "1.0.0",
   "description": "Entity Engineering Audit API for AI-search optimization.",
-  "main": "api/audit.js",
   "type": "module",
+  "main": "api/audit.js",
   "scripts": {
     "start": "node api/audit.js"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "axios": "^1.6.0",
