--- a/vercel.json
+++ b/vercel.json
@@ -7,12 +7,12 @@
   "functions": {
     "api/**/*.js": {
       "runtime": "nodejs20.x",
-      "maxDuration": 10
+      "launcherType": "Node.js"
     }
   },
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "headers": [
     {
