--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,7 @@
   "buildCommand": "echo 'No build needed'",
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs20.x",
-      "launcherType": "Node.js"
+      "runtime": "vercel-node@3.0.0"
     }
   },
   "routes": [
