--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,15 @@
   "version": 2,
   "cleanUrls": true,
   "trailingSlash": false,
-  "buildCommand": "echo 'No build needed'",
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "vercel-node@3.0.0"
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
-  },
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
   ],
   "headers": [
     {
