--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
+    "node-fetch": "^3.3.2",
     "resend": "^3.2.0"
   }
 }
