--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exmxc-audit",
   "version": "1.0.0",
   "description": "Entity Engineering Audit API for AI-search optimization.",
+  "type": "module",
   "main": "api/audit.js",
   "scripts": {
     "start": "node api/audit.js"
@@ -9,7 +10,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "node-fetch": "^2.6.7",
+    "node-fetch": "^3.3.2",
     "resend": "^3.2.0"
   },
   "engines": {
