--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "exmxc-audit",
   "version": "1.0.0",
-  "description": "Entity Engineering Audit API",
+  "description": "Entity Engineering Audit API for AI-search optimization.",
+  "type": "module",
   "main": "api/audit.js",
   "scripts": {
     "start": "node api/audit.js"
   },
-  "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12"
-  },
   "engines": {
     "node": "20.x"
+  },
+  "dependencies": {
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "resend": "^3.2.0"
   }
 }
