--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "exmxc-audit",
   "version": "1.0.0",
-  "description": "Entity Engineering Audit API for AI-search optimization.",
   "type": "module",
-  "main": "api/audit.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node api/audit.js"
-  },
-  "engines": {
-    "node": "20.x"
+    "dev": "vercel dev",
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "axios": "^1.7.2",
     "cheerio": "^1.0.0-rc.12",
-    "node-fetch": "^3.3.2",
-    "resend": "^3.2.0"
+    "resend": "^3.1.0"
   }
 }
