--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "exmxc-audit",
   "version": "1.0.0",
+  "description": "Entity Engineering Audit API for AI-search optimization.",
   "type": "module",
-  "main": "index.js",
+  "main": "api/audit.js",
   "scripts": {
-    "dev": "vercel dev",
-    "start": "node server.js"
+    "start": "node api/audit.js"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "resend": "^3.1.0"
+    "resend": "^3.2.0"
   }
 }
