--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "exmxc-audit",
   "version": "1.0.0",
-  "description": "Entity Engineering Audit API for AI-search optimization.",
   "type": "module",
   "main": "api/audit.js",
   "scripts": {
@@ -12,7 +11,6 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "resend": "^3.2.0"
+    "cheerio": "^1.0.0-rc.12"
   }
 }
