--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
   "public": true,
   "builds": [
     { "src": "api/audit.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
+    { "src": "public/**", "use": "@vercel/static-build" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
