--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
   "version": 2,
-  "public": true,
   "builds": [
     { "src": "api/audit.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static-build" }
+    { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
@@ -11,3 +10,4 @@
     { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
+
