--- a/package.json
+++ b/package.json
@@ -2,15 +2,11 @@
   "name": "exmxc-audit",
   "version": "1.0.0",
   "type": "module",
-  "main": "api/audit.js",
   "scripts": {
-    "start": "node api/audit.js"
-  },
-  "engines": {
-    "node": "20.x"
+    "build": "echo 'Build complete'"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12"
+    "axios": "^1.7.9",
+    "cheerio": "^1.0.0"
   }
 }
