--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
+  "public": true,
   "builds": [
     { "src": "api/audit.js", "use": "@vercel/node" },
-    { "src": "public/**", "use": "@vercel/static" }
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
