--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,27 @@
 {
   "version": 2,
-  "public": true,
   "builds": [
-    { "src": "api/audit.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
+    {
+      "src": "api/audit.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
   ],
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1.js" },
-    { "src": "^/$", "dest": "/public/index.html" },
-    { "src": "^(?:/(.*))$", "dest": "/public/$1" }
+    {
+      "src": "^/api/audit$",
+      "dest": "api/audit.js"
+    },
+    {
+      "src": "/",
+      "dest": "public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "public/$1"
+    }
   ]
 }
