--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,13 @@
 {
   "version": 2,
+  "public": true,
   "builds": [
     { "src": "api/audit.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
+    { "src": "public/index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "^/api/(.*)$", "dest": "/api/$1" },
-    { "src": "^/(.*)$", "dest": "/public/$1" }
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/", "dest": "/public/index.html" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
