--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "exmxc-audit",
   "version": "1.0.0",
   "type": "module",
+  "main": "api/audit.js",
   "scripts": {
-    "build": "echo 'Build complete'"
+    "start": "node api/audit.js"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
-    "axios": "^1.7.9",
-    "cheerio": "^1.0.0"
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
