--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
   "version": 2,
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
+  "builds": [
+    { "src": "api/audit.js", "use": "@vercel/node" },
+    { "src": "api/predictive-audit.js", "use": "@vercel/node" },
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "predictive.html", "use": "@vercel/static" }
+  ],
   "routes": [
     { "src": "^/api/audit$", "dest": "api/audit.js" },
     { "src": "^/api/predictive-audit$", "dest": "api/predictive-audit.js" },
