--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/audit.js", "use": "@vercel/node" },
-    { "src": "api/predictive-audit.js", "use": "@vercel/node" },
-    { "src": "index.html", "use": "@vercel/static" },
-    { "src": "predictive.html", "use": "@vercel/static" }
+    { "src": "api/**/*.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "^/api/audit$", "dest": "api/audit.js" },
-    { "src": "^/api/predictive-audit$", "dest": "api/predictive-audit.js" },
-    { "src": "^/predictive-audit$", "dest": "/predictive.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "^/api/audit$", "dest": "/api/audit.js" },
+    { "src": "^/api/predictive-audit$", "dest": "/api/predictive-audit.js" },
+
+    { "src": "^/predictive-audit$", "dest": "/public/predictive.html" },
+    { "src": "^/style.css$", "dest": "/public/style.css" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
