--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0"
+  },
+  "devDependencies": {
+    "playwright-core": "^1.56.1"
   }
 }
-
