--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "build": "echo 'Build complete'"
   },
   "dependencies": {
+    "@upstash/redis": "^1.35.6",
     "axios": "^1.7.9",
-    "cheerio": "^1.0.0"
-  },
-  "devDependencies": {
-    "playwright-core": "^1.56.1"
+    "cheerio": "^1.0.0",
+    "playwright": "^1.57.0"
   }
 }
