--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "exmxc-audit",
   "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "build": "echo 'Build complete'"
   },
@@ -9,6 +12,7 @@
     "@upstash/redis": "^1.35.6",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
-    "playwright-aws-lambda": "^0.11.0"
+    "playwright-core": "1.41.2",
+    "@sparticuz/chromium": "112"
   }
 }
