--- a/eei-crawler/package.json
+++ b/eei-crawler/package.json
@@ -1,1 +1,9 @@
+{
+  "name": "eei-crawler",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "node src/server.js",
+    "start": "node src/server.js"
+  }
+}
 
