--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
     { "src": "^/api/batch-run$", "dest": "/api/batch-run.js" },
     { "src": "^/api/verticals$", "dest": "/api/verticals.js" },
 
-    🔥 { "src": "^/api/audit-batch$", "dest": "/api/audit-batch.js" },
+    { "src": "^/api/audit-batch$", "dest": "/api/audit-batch.js" },
 
     { "src": "^/batch$", "dest": "/public/batch-run.html" },
     { "src": "^/batch-run$", "dest": "/public/batch-run.html" },
